--- a/src/spartademo.csproj
+++ b/src/spartademo.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <AzureFunctionsVersion>V2</AzureFunctionsVersion>
-    <LangVersion>8.0</LangVersion>
+    <LangVersion>7.0</LangVersion>
     <RootNamespace>Spartademo</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
@@ -12,15 +12,18 @@
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.5" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.24" />
     <PackageReference Include="SiaConsulting.Azure.WebJobs.Extensions.EventStoreExtension.Streams" Version="0.1.1" />
-    <PackageReference Include="SiaConsulting.EO" Version="0.0.4" />
+    <PackageReference Include="SiaConsulting.EO" Version="0.0.7" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="local.settings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DTOs\Queries\" />
   </ItemGroup>
 </Project>
